<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BB009688"
    tools:context=".SigningUp">

    <Spinner
        android:id="@+id/typeSU"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:spinnerMode="dropdown"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/userLayoutSU"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634" />

    <!-- testing-->
    <!-- First Name Layout -->
    <LinearLayout
        android:id="@+id/firstNameLayoutSU"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLayoutSU"
        app:layout_constraintVertical_bias="0.012">

        <TextView
            android:id="@+id/firstNameTSU"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/first_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#020202"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstNameGSU"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <!-- Last Name Layout -->
    <LinearLayout
        android:id="@+id/lastNameLayoutSU"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLayoutSU"
        app:layout_constraintVertical_bias="0.012">

        <TextView
            android:id="@+id/lastNameTSU"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/last_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#020202"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lastNameGSU"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <!-- Phone Number Layout -->
    <LinearLayout
        android:id="@+id/phoneLayoutSU"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLayoutSU"
        app:layout_constraintVertical_bias="0.012">

        <TextView
            android:id="@+id/phoneTSU"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#020202"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phoneGSU"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/enter_phone_number"
            android:inputType="phone" />
    </LinearLayout>

    <!-- Program of Study Layout (Student only) -->
    <LinearLayout
        android:id="@+id/programLayoutSU"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLayoutSU"
        app:layout_constraintVertical_bias="0.012">

        <TextView
            android:id="@+id/programTSU"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/program"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#020202"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/programGSU"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/enter_program_of_study"
            android:inputType="text" />
    </LinearLayout>


    <!-- TUTOR ONLY
    <!- Courses Offered Layout (Tutor only) -->
    <LinearLayout
        android:id="@+id/coursesLayoutSU"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degreeLayoutSU"
        app:layout_constraintVertical_bias="0.012">

        <TextView
            android:id="@+id/coursesTSU"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/courses_offered"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#020202"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/coursesGSU"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/enter_courses_comma_separated"
            android:inputType="text" />
    </LinearLayout>

    <!-- Highest Degree Layout (Tutor only) -->


    <LinearLayout
        android:id="@+id/degreeLayoutSU"
        android:visibility="gone"
        android:layout_width="391dp"
        android:layout_height="74dp"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/errorMsgSU"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programLayoutSU"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/degreeTSU"
            android:layout_width="130dp"
            android:layout_height="61dp"
            android:fontFamily="sans-serif"
            android:text="Highest Degree"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#020202"
            android:gravity="center_vertical"
             android:textStyle="bold"    />
        <EditText
            android:id="@+id/degreeGSU"
            android:layout_width="262dp"
            android:layout_height="68dp"
            android:hint="Enter Highest Degree"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userLayoutSU"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101">

        <TextView
            android:id="@+id/emailTSU"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#020202"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/emailGSU"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/eguide"
            android:inputType="textEmailAddress"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passLayoutSU"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLayoutSU"
        app:layout_constraintVertical_bias="0.012">

        <TextView
            android:id="@+id/passTSU"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#020202"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/passGSU"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/signUpSU"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:backgroundTint="#6E0A2AED"
        android:onClick="onClickSignUpSU"
        android:text="@string/signup"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toEndOf="@+id/backSU"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <Button
        android:id="@+id/backSU"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="#6E0A2AED"
        android:onClick="onClickBackSU"
        android:text="@string/back"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
        android:id="@+id/errorMsgSU"
        android:layout_width="376dp"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/blank"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#BD1D1D"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLayoutSU"
        app:layout_constraintVertical_bias="0.986" />

</androidx.constraintlayout.widget.ConstraintLayout>