<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BB009688"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/utype"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/userLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <LinearLayout
        android:id="@+id/userLayout"
        android:layout_width="390dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372">

        <TextView
            android:id="@+id/unameT"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/unameG"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/eguide"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passLayout"
        android:layout_width="390dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLayout"
        app:layout_constraintVertical_bias="0.091">

        <TextView
            android:id="@+id/passT"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/passG"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Password" />
    </LinearLayout>

    <Button
        android:id="@+id/singIn"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:backgroundTint="#6E0A2AED"
        android:onClick="onClickSignIn"
        android:text="@string/signin"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/signUp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#6E0A2AED"
        android:onClick="onClickGoSignUp"
        android:text="@string/signup"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EF0505"
        android:onClick="onClickExit"
        android:text="@string/exit"
        app:layout_constraintBottom_toTopOf="@+id/utype"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>